# concordium-euro2ccd-service

./: .Jenkinsfile  .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Jenkinsfile  README.md
.github/workflows/: ci.yaml  release.yaml
jenkinsfiles/: Jenkinsfile
local_exchange/: Cargo.toml
local_exchange/src/: main.rs
resources/: bitfinex-com.der  bitfinex-com.pem
scripts/: docker-compose.yml
scripts/debian-package/: build-and-copy-out.sh  build.sh  deb.Dockerfile
scripts/local/: Dockerfile
src/: certificate_resolver.rs  config.rs  database.rs  exchanges.rs  helpers.rs  main.rs  node.rs  prometheus.rs  secretsmanager.rs  sources.rs
test_exchange/: Cargo.toml  Dockerfile  README.md
test_exchange/src/: main.rs
