[package]
name = "concordium-eur2ccd"
version = "0.4.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "./deps/concordium-rust-sdk", version = "*" }
structopt = "0.3.23"
clap = "2.33.3"
env_logger = "0.9.0"
log = "0.4"
tokio = {version = "1.8", features = ["full"]}
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.11.9", features = ["json"]}
serde_json = "1.0.60"
anyhow = "1"
num-rational = "0.4"
num-traits = "0.2.14"
num-bigint = "0.4"
num-integer = "0.1.44"
chrono = {version = "0.4", features = ["serde"] }
tonic = "0.5"
mysql = "21.0.2"
serde = { version = "1.0", features = ["derive"] }

aws-config = "0.6.0"
aws-sdk-secretsmanager = "0.6.0"

prometheus = "0.13.0"
warp = "0.3"

[dev-dependencies]
futures = "0.3.19"
