[package]
name = "concordium-eur2ccd"
version = "0.8.0"
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concordium-rust-sdk = { path = "./deps/concordium-rust-sdk" }
structopt = "0.3"
clap = "2.34"
env_logger = "0.9.0"
log = "0.4"
tokio = {version = "1.27", features = ["full"]}
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.12", features = ["json"]}
serde_json = "1.0"
anyhow = "1"
num-rational = "0.4"
num-traits = "0.2.14"
num-bigint = "0.4"
num-integer = "0.1.44"
chrono = {version = "0.4", features = ["serde"] }
tonic = "0.12"
mysql = { version = "23.0" }
mysql_common = { version = "0.29", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }

aws-config = "0.6"
aws-sdk-secretsmanager = "0.6"

prometheus = "0.13"
warp = "0.3"

[dev-dependencies]
futures = "0.3.19"
